--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactivida</title>
+    <title>Interactivida Web</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <script src="./js/script.js"></script>
+    <script>
+        /*
+        alert('Hola Mundo');
+        */
+    </script>
 </body>
 </html>
