dark mode y css

--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <title>Interactivida Web</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+<body class="dark">
+    <h1>Dark Mode</h1>
+    <button id="toggle-theme-btn">Toggle Dark Mode</button>
     <script src="./js/script.js"></script>
-    <script>
-        /*
-        alert('Hola Mundo');
-        */
-    </script>
+    <script src="./js/dark-mode.js"></script>
 </body>
 </html>
