--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body class="dark">
     <h1>Dark Mode</h1>
     <button id="toggle-theme-btn">Toggle Dark Mode</button>
-    <script src="./js/script.js"></script>
+    <input type="color" id="color-picker">
+    <input type="color" id="background-picker">
+
     <script src="./js/dark-mode.js"></script>
 </body>
 </html>
