--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactivida Web</title>
+    <title>Interactividad</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="dark">
+    <main>
+
     <h1>Dark Mode</h1>
-    <button id="toggle-theme-btn">Activar Dark Mode</button>
+    <button id="toggle-theme-btn">
+        <i class="fa-solid fa-moon"></i>
+    </button>
     <input type="color" id="color-picker">
     <input type="color" id="background-picker">
-
+     </main>
     <script src="./js/dark-mode.js"></script>
 </body>
 </html>
